# enterprise-rag-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  schemas.py
app/api/: routes.py
app/graph/: state.py  workflow.py
app/llm/: ollama_client.py
app/retrieval/: chroma_store.py  chunking.py  retriever.py
app/services/: answer_service.py  feedback_service.py  ingest_service.py  rag_logic.py
app/static/: app.js  index.html
data/source_docs/: faq.md  policy.md
docs/: architecture.md  prompt_spec.md  tradeoffs.md
evals/: goldens.jsonl  run_eval.py
scripts/: chat_cli.py  ingest.py
tests/: test_api.py  test_chunking.py  test_prompt_contract.py
