[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-assistant"
version = "0.1.0"
description = "Portfolio sample: Japanese document RAG chatbot with FastAPI, LangGraph, Chroma, and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "chromadb>=0.5",
  "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
